force-app/main/default/objects/Session_Timeout_Config__mdt/Session_Timeout_Config__mdt.object-meta.xml
<CustomObject>
    <label>Session Timeout Config</label>
    <pluralLabel>Session Timeout Configs</pluralLabel>
</CustomObject>