force-app/main/default/objects/Session_Timeout_Config__mdt/fields/Continue_Button_Label__c.field-meta.xml
<CustomField>
    <fullName>Continue_Button_Label__c</fullName>
    <defaultValue>&apos;Continue Session&apos;</defaultValue>
    <description>Enter text to be displayed on the Continue button.</description>
    <inlineHelpText>Enter the label users will see on the Continue button (e.g., &quot;Proceed&quot;, &quot;Next&quot;).</inlineHelpText>
    <label>Continue Button Label</label>
    <length>255</length>
    <type>Text</type>
</CustomField>