force-app/main/default/objects/Session_Timeout_Config__mdt/fields/Is_Active__c.field-meta.xml
<CustomField>
    <fullName>Is_Active__c</fullName>
    <defaultValue>true</defaultValue>
    <description>When unchecked, this configuration will be ignored by the system.</description>
    <inlineHelpText>Toggle to enable/disable this timeout configuration. Only active configurations are loaded by the application.</inlineHelpText>
    <label>Is Active</label>
    <type>Checkbox</type>
</CustomField>