force-app/main/default/objects/Session_Timeout_Config__mdt/fields/Logo_Url__c.field-meta.xml
<CustomField>
    <fullName>Logo_Url__c</fullName>
    <description>URL for the logo image to display in the timeout modal</description>
    <inlineHelpText>Enter a full URL (https://...), Salesforce static resource path (/resource/ResourceName), or document link.
Examples:
• External URL: https://yourdomain.com/images/logo.png
• Static Resource: /resource/CompanyLogo
• Experience Cloud: /img/communityLogo.png
Image will be displayed at max-height: 60px in the modal.</inlineHelpText>
    <label>Logo Url</label>
    <length>255</length>
    <type>Text</type>
</CustomField>