force-app/main/default/objects/Session_Timeout_Config__mdt/fields/Logout_Button_Color__c.field-meta.xml
<CustomField>
    <fullName>Logout_Button_Color__c</fullName>
    <defaultValue>&apos;&apos;</defaultValue>
    <description>Defines the background color of the Logout button.</description>
    <inlineHelpText>Enter a valid CSS color (e.g., hex #FF0000, red, rgb(255,0,0)) for the Logout button background.</inlineHelpText>
    <label>Logout Button Color</label>
    <length>50</length>
    <type>Text</type>
</CustomField>