force-app/main/default/objects/Session_Timeout_Config__mdt/fields/Modal_Body_Color__c.field-meta.xml
<CustomField>
    <fullName>Modal_Body_Color__c</fullName>
    <defaultValue>&apos;#FFFFFF&apos;</defaultValue>
    <description>Defines the background color of the modal body content.</description>
    <inlineHelpText>Enter a valid CSS color (e.g., hex #FF0000, red, rgb(255,0,0)) for the main content area of the modal.</inlineHelpText>
    <label>Modal Body Color</label>
    <length>50</length>
    <type>Text</type>
</CustomField>