force-app/main/default/objects/Session_Timeout_Config__mdt/fields/Modal_Message__c.field-meta.xml
<CustomField>
    <fullName>Modal_Message__c</fullName>
    <defaultValue>&apos;Your session is about to expire...&apos;</defaultValue>
    <description>The message is shown in the inactivity timeout model.</description>
    <inlineHelpText>Enter the body text that informs users about the inactivity timeout.</inlineHelpText>
    <label>Modal Message</label>
    <length>32768</length>
    <type>LongTextArea</type>
</CustomField>