force-app/main/default/objects/Session_Timeout_Config__mdt/fields/Modal_Title__c.field-meta.xml
<CustomField>
    <fullName>Modal_Title__c</fullName>
    <defaultValue>&apos;Session About to Expire&apos;</defaultValue>
    <description>Title of the inactivity timeout modal.</description>
    <inlineHelpText>Provide a short, descriptive title for the modal window (e.g., &quot;Session Timeout&quot;).</inlineHelpText>
    <label>Modal Title</label>
    <length>255</length>
    <type>Text</type>
</CustomField>