force-app/main/default/objects/Session_Timeout_Config__mdt/fields/Post_Timeout_Action__c.field-meta.xml
<CustomField>
    <fullName>Post_Timeout_Action__c</fullName>
    <description>Determines what happens when session timeout occurs.</description>
    <inlineHelpText>Select &apos;logout&apos; for standard logout or &apos;redirect&apos; to direct users to a specific URL.
 
Important: If &apos;redirect&apos; is selected, you must provide a valid URL in the &apos;Redirect URL&apos; field. Otherwise, the session timeout pop-up may not function as expected.</inlineHelpText>
    <label>Post-Timeout Action</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>logout</fullName>
                <default>true</default>
                <label>Logout (Default)</label>
            </value>
            <value>
                <fullName>redirect</fullName>
                <label>Redirect</label>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>