force-app/main/default/objects/Session_Timeout_Config__mdt/fields/Priority__c.field-meta.xml
<CustomField>
    <fullName>Priority__c</fullName>
    <defaultValue>1</defaultValue>
    <description>Higher values take precedence. Default=01, Overrides=100, Fallbacks=0</description>
    <inlineHelpText>Set to 100 for forced overrides, 01 for standard defaults, or 0 for last-resort fallbacks</inlineHelpText>
    <label>Priority</label>
    <precision>3</precision>
    <scale>0</scale>
    <type>Number</type>
    <unique>true</unique>
</CustomField>