force-app/main/default/objects/Session_Timeout_Config__mdt/validationRules/Require_Action_Fields.validationRule-meta.xml
<ValidationRule>
    <fullName>Require_Action_Fields</fullName>
    <active>true</active>
    <errorConditionFormula>AND(
      ISPICKVAL(Post_Timeout_Action__c, &apos;redirect&apos; ),            ISBLANK(Redirect_URL__c)
  )</errorConditionFormula>
    <errorMessage>Required field missing: 
- Set Redirect URL when Action=&apos;redirect&apos;</errorMessage>
</ValidationRule>